Fixed vertical align problem

--- a/civic-sentiment.css
+++ b/civic-sentiment.css
@@ -7,9 +7,9 @@
 
 .myAlignVertically {
   position: relative;
-  /*top: 50%;*/
-  -webkit-transform: translateY(15%);
-  -moz-transform: translateY(15%);
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
 }
 
 .nopadding {
